--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ I actively collaborate with international scholars on projects targeting top com
           <span class="italic">Supervisor: Dr. Behrooz Nasihatkon</span>
         </p>
         <p class="mt-6 text-sm text-slate-500">
-          <strong>Year:</strong> Sep. 2022 – Oct. 2025 <strong>GPA:</strong> 18.43 / 20 (≈ 3.9 / 4)  <strong>First:</strong> Rank
+          <strong>Year:</strong> Sep. 2022 – Oct. 2025 <strong>GPA:</strong> 18.43 / 20 (≈ 3.9 / 4)  -  <strong>First:</strong> Rank
         </p>
       </div>
 
@@ -213,7 +213,7 @@ I actively collaborate with international scholars on projects targeting top com
           <span class="italic">Supervisor: Dr. Seyyed Sajjad Moosapour</span>
         </p>
         <p class="mt-6 text-sm text-slate-500">
-          <strong>Year:</strong> Sep. 2017 – Jan. 2022 <strong>GPA:</strong> 17.70 / 20  <strong>second:</strong> Rank
+          <strong>Year:</strong> Sep. 2017 – Jan. 2022 <strong>GPA:</strong> 17.70 / 20  -  <strong>second:</strong> Rank
         </p>
       </div>
 
@@ -286,7 +286,7 @@ I actively collaborate with international scholars on projects targeting top com
           </div>
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="100">
             <i class="fa-solid fa-eye text-green-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">2D/3D Computer Vision </span>
+            <span class="font-semibold text-sm">2D / 3D Computer Vision </span>
           </div>
 
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="300">
@@ -299,7 +299,7 @@ I actively collaborate with international scholars on projects targeting top com
           </div>
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left">
             <i class="fa-solid fa-brain text-red-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm"> Test-Time domain adaptation | Hallucination mitigation</span>
+            <span class="font-semibold text-sm"> Test-Time adaptation | Hallucination mitigation</span>
           </div>
           <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="500">
             <i class="fa-solid fa-robot text-blue-500 text-3xl mb-1"></i>
