--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ I actively collaborate with international scholars on projects targeting top com
         <h3 class="font-semibold text-2xl flex items-center gap-3">
           <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/chamran_logo.jpeg?raw=true" class="w-10 h-10" alt="SCU" />
           B.Sc. in Electrical Engineering – Electronics —
-          <a href="https://scu.ac.ir/en" style="color: inherit; text-decoration: underline;">Shahid Chamran University of Ahvaz</a>
+          <a href="https://scu.ac.ir/en" style="color: inherit; text-decoration: underline;">Shahid Chamran University of Ahwaz</a>
         </h3>
         <p class="mt-4 text-lg">
           Thesis: <em>Design and implementation of a speed controller and autopilot architecture for agricultural quadcopters</em><br/>
@@ -218,13 +218,13 @@ I actively collaborate with international scholars on projects targeting top com
       </div>
 
       <!-- High School -->
-      <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="200">
-        <h3 class="font-semibold text-2xl flex items-center gap-3">
-          <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/nodet.png" class="w-10 h-10" alt="NODET" />
-          Diploma in Mathematics & Physics —
-          <a href="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents" style="color: inherit; text-decoration: underline;">
-            Dr. Hesabi Leading Government High School, Ahwaz 
-          </a>
+              <div class="bg-gray-50 shadow-lg rounded-2xl p-8" data-aos="fade-left" data-aos-delay="300">
+          <h3 class="font-semibold text-2xl flex items-center gap-3">
+            <img src="https://mjahmadee.github.io/Images/nodet.png" class="w-10 h-10" alt="NODET" />
+            Diploma in Mathematics & Physics —
+            <a href="https://en.wikipedia.org/wiki/National_Organization_for_Development_of_Exceptional_Talents" style="color: inherit; text-decoration: underline;"
+              >Dr. Hesabi Leading Government High School, Ahwaz </a
+            >
         </h3>
         <p class="mt-4 text-lg">
           Completed rigorous STEM curriculum with advanced research projects.
