--- a/index.html
+++ b/index.html
@@ -543,28 +543,44 @@ I actively collaborate with international scholars on projects targeting top com
     </div>
   </section>
 
-  <!-- Certificates -->
-  <section id="certificates" class="py-20 bg-gray-50">
-    <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
-      <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">📜 Certificates</h2>
-      <div class="grid sm:grid-cols-2 gap-8">
-        <a href="https://www.coursera.org/account/accomplishments/certificate/27H94GEHRAKE" class="bg-white shadow rounded-lg p-6 flex items-center gap-4 hover:shadow-lg transition">
-          <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
-          <span class="font-semibold">Structuring Machine Learning Projects</span>
-        </a>
-        <a href="https://www.coursera.org/account/accomplishments/certificate/JKQ3Y88ZWKP9" class="bg-white shadow rounded-lg p-6 flex items-center gap-4 hover:shadow-lg transition">
-          <img src="https://github.com/shining0611armor/shining0611armor.github.io/tree/main/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
-          <span class="font-semibold">Neural Networks and Deep Learning</span>
-        </a>
-      </div>
-      <div class="mt-6 text-center">
-        <i class="fa-solid fa-globe text-2xl align-middle mr-2"></i>
-        <a href="https://mjahmadee.site123.me/#section-5e8dce1492e0f" class="underline text-blue-600 hover:text-blue-800"
-          >More on Personal Website</a
-        >
-      </div>
+<!-- Certificates -->
+<section id="certificates" class="py-20 bg-gray-50">
+  <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">📜 Certificates</h2>
+    <div class="grid sm:grid-cols-2 gap-8">
+      <!-- Convolutional Neural Networks -->
+      <a href="https://www.coursera.org/account/accomplishments/records/G5Q2XBJAQUA4" class="bg-white shadow rounded-lg p-6 flex items-center gap-4 hover:shadow-lg transition">
+        <img src="https://mjahmadee.github.io/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
+        <span class="font-semibold">Convolutional Neural Networks – Coursera (March 2024)</span>
+      </a>
+
+      <!-- Neural Networks and Deep Learning -->
+      <a href="https://www.coursera.org/account/accomplishments/records/BCR2QYDVF5VP" class="bg-white shadow rounded-lg p-6 flex items-center gap-4 hover:shadow-lg transition">
+        <img src="https://mjahmadee.github.io/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
+        <span class="font-semibold">Neural Networks and Deep Learning – Coursera (September 2023)</span>
+      </a>
+
+      <!-- Structuring Machine Learning Projects -->
+      <a href="https://www.coursera.org/account/accomplishments/records/F5LSAHL9H2H6" class="bg-white shadow rounded-lg p-6 flex items-center gap-4 hover:shadow-lg transition">
+        <img src="https://mjahmadee.github.io/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
+        <span class="font-semibold">Structuring Machine Learning Projects – Coursera (November 2023)</span>
+      </a>
+
+      <!-- Improving Deep Neural Networks -->
+      <a href="https://www.coursera.org/account/accomplishments/records/WQW42P7GLJY4" class="bg-white shadow rounded-lg p-6 flex items-center gap-4 hover:shadow-lg transition">
+        <img src="https://mjahmadee.github.io/Images/coursera.png" alt="Coursera" class="w-10 h-10" />
+        <span class="font-semibold">Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization – Coursera (October 2023)</span>
+      </a>
     </div>
-  </section>
+
+    <div class="mt-6 text-center">
+      <i class="fa-solid fa-globe text-2xl align-middle mr-2"></i>
+      <a href="https://mjahmadee.site123.me/#section-5e8dce1492e0f" class="underline text-blue-600 hover:text-blue-800">
+        More on Personal Website
+      </a>
+    </div>
+  </div>
+</section>
 
 
 
