--- a/index.html
+++ b/index.html
@@ -573,11 +573,13 @@ I actively collaborate with international scholars on projects targeting top com
       </a>
     </div>
 
-    <div class="mt-6 text-center">
-      <i class="fa-solid fa-globe text-2xl align-middle mr-2"></i>
-      <a href="https://mjahmadee.site123.me/#section-5e8dce1492e0f" class="underline text-blue-600 hover:text-blue-800">
-        More on Personal Website
-      </a>
+      <!-- LinkedIn -->
+      <div class="mt-16 text-center" data-aos="fade-up" data-aos-delay="400">
+        <i class="fa-brands fa-linkedin text-2xl align-middle mr-2"></i>
+        <a
+          href="https://www.linkedin.com/in/mehran-tamjidi-34293b229/details/certifications/"
+          class="text-blue-600 underline hover:text-blue-800"
+          >More on LinkedIn</a>
     </div>
   </div>
 </section>
