--- a/index.html
+++ b/index.html
@@ -195,9 +195,10 @@ I actively collaborate with international scholars on projects targeting top com
         <p class="mt-4 text-lg">
           Thesis: <em>Test-Time Domain Adaptation in 3D Point Clouds</em><br/>
           <span class="italic">Supervisor: Dr. Behrooz Nasihatkon</span>
+          Thesis Grade: Full Marks (20 / 20)
         </p>
         <p class="mt-6 text-sm text-slate-500">
-          <strong>Year:</strong> Sep. 2022 – Oct. 2025 <strong>GPA:</strong> 18.43 / 20 (≈ 3.9 / 4)  -  <strong>First</strong> Rank
+          <strong>Year:</strong> Sep. 2022 – Oct. 2025 <strong>GPA:</strong> 18.43 / 20 (3.9 / 4)  -  <strong>First</strong> Rank
         </p>
       </div>
 
@@ -211,6 +212,8 @@ I actively collaborate with international scholars on projects targeting top com
         <p class="mt-4 text-lg">
           Thesis: <em>Design and implementation of a speed controller and autopilot architecture for agricultural quadcopters</em><br/>
           <span class="italic">Supervisor: Dr. Seyyed Sajjad Moosapour</span>
+          Thesis Grade: Full Marks (20 / 20)
+
         </p>
         <p class="mt-6 text-sm text-slate-500">
           <strong>Year:</strong> Sep. 2017 – Jan. 2022 <strong>GPA:</strong> 17.70 / 20  -  <strong>second</strong> Rank
