--- a/index.html
+++ b/index.html
@@ -470,57 +470,71 @@ I actively collaborate with international scholars on projects targeting top com
 
 
 
+<!-- Honors & Awards -->
+<section id="honors" class="py-20 bg-gray-50">
+  <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">🏅 Honors & Awards</h2>
+    <div class="grid md:grid-cols-2 gap-8">
 
-  <!-- Honors & Awards -->
-  <section id="honors" class="py-20 bg-gray-50">
-    <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
-      <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">🏅 Honors & Awards</h2>
-      <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-          <i class="fa-solid fa-award text-yellow-500 text-3xl mt-1"></i>
-          <div>
-            <a href="https://drive.google.com/file/d/1NHqhuQfyaiDHQpU-UM9TNd1VhI6C-h-A/view" class="font-semibold underline">Recognized as a Top 5% Peer Reviewer for JAMA Network Open in 2024</a>
-            <div class="text-sm text-slate-500">Winter 2024</div>
-          </div>
-        </div>
-        <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-          <i class="fa-solid fa-trophy text-blue-500 text-3xl mt-1"></i>
-          <div>
-            <a href="https://ee.kntu.ac.ir/page-show334/fa/8/news/26067-..." class="font-semibold underline">First-Place Selection by Faculty of ECE for PhD Project</a>
-            <div class="text-sm text-slate-500">Winter 2024</div>
-          </div>
-        </div>
-        <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-          <i class="fa-solid fa-medal text-green-500 text-3xl mt-1"></i>
-          <div>
-            <div class="font-semibold">Ranked 9<sup>th</sup> Nationally in PhD Entrance Exam in Control Engineering</div>
-            <div class="text-sm text-slate-500">Summer 2022</div>
-          </div>
-        </div>
-        <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-          <i class="fa-solid fa-star text-pink-500 text-3xl mt-1"></i>
-          <div>
-            <div class="font-semibold">Ranked 1<sup>st</sup> in The 6th Festival of Selected Seminars in ECE</div>
-            <div class="text-sm text-slate-500">Feb. 2021</div>
-          </div>
-        </div>
-        <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-          <i class="fa-solid fa-project-diagram text-orange-500 text-3xl mt-1"></i>
-          <div>
-            <div class="font-semibold">Among Top 10 Projects in B.Sc. Program at AUT</div>
-            <div class="text-sm text-slate-500">Summer 2019</div>
-          </div>
-        </div>
-        <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-          <i class="fa-solid fa-percent text-red-500 text-3xl mt-1"></i>
-          <div>  
-            <div class="font-semibold">Ranked among Top 1% in Iran's National University Entrance Exam</div>
-            <div class="text-sm text-slate-500">Summer 2015</div>
-          </div>
+      <!-- Reviewer for top-tier venues -->
+      <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+        <i class="fa-solid fa-award text-yellow-500 text-3xl mt-1"></i>
+        <div>
+          <div class="font-semibold underline">Reviewer for Top-Tier Venues</div>
+          <div class="text-sm text-slate-500">September 2025</div>
         </div>
       </div>
+
+      <!-- Top Rank in both MSc and BSc -->
+      <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+        <i class="fa-solid fa-trophy text-blue-500 text-3xl mt-1"></i>
+        <div>
+          <div class="font-semibold underline">Top Rank in Both MSc and BSc Programs</div>
+          <div class="text-sm text-slate-500">Winter 2024</div>
+        </div>
+      </div>
+
+      <!-- National Talent Program -->
+      <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+        <i class="fa-solid fa-medal text-green-500 text-3xl mt-1"></i>
+        <div>
+          <div class="font-semibold">Eligible for Iranian National Talent Program with Substantial Score</div>
+          <div class="text-sm text-slate-500">September 2025</div>
+        </div>
+      </div>
+
+      <!-- KNTU Festival -->
+      <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+        <i class="fa-solid fa-star text-pink-500 text-3xl mt-1"></i>
+        <div>
+          <div class="font-semibold">
+            Ranked 1<sup>st</sup> in the 9<sup>th</sup> Festival of Selected Seminars at KNTU
+          </div>
+          <div class="text-sm text-slate-500">February 2023</div>
+        </div>
+      </div>
+
+      <!-- Top 3 Projects -->
+      <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+        <i class="fa-solid fa-diagram-project text-orange-500 text-3xl mt-1"></i>
+        <div>
+          <div class="font-semibold">Among Top 3 Projects in the B.Sc. Program at SBU</div>
+          <div class="text-sm text-slate-500">January 2022</div>
+        </div>
+      </div>
+
+      <!-- National Entrance Exam -->
+      <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+        <i class="fa-solid fa-percent text-red-500 text-3xl mt-1"></i>
+        <div>  
+          <div class="font-semibold">Ranked Among Top 1% in Iran's National University Entrance Exam</div>
+          <div class="text-sm text-slate-500">September 2017 & September 2022</div>
+        </div>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Language Skills -->
   <section id="languages" class="py-20 bg-white">
