--- a/index.html
+++ b/index.html
@@ -241,42 +241,44 @@ I actively collaborate with international scholars on projects targeting top com
 
 
   <!-- Technical Skills -->
-  <section id="skills" class="py-20 bg-gray-50">
-    <div class="max-w-screen-lg mx-auto px-6">
-      <h2 class="text-4xl font-bold mb-12 text-center uppercase tracking-wide" data-aos="zoom-in">
-        🛠 Technical Skills
-      </h2>
+  <div class="max-w-screen-lg mx-auto px-6">
+    <h2 class="text-4xl font-bold mb-12 text-center uppercase tracking-wide" data-aos="zoom-in">
+      🛠 Technical Skills
+    </h2>
 
-      <!-- Programming & Scripting -->
-      <div class="mt-8" data-aos="fade-up">
-        <h3 class="text-2xl font-semibold mb-6">📜 Programming & Scripting</h3>
-        <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left">
-            <i class="devicon-python-plain colored text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Python & OpenCV</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="100">
-            <i class="devicon-pytorch-original colored text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">PyTorch & CUDA</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="200">
-            <i class="devicon-tensorflow-original colored text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">TensorFlow & Sklearn</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="300">
-            <i class="fa-solid fa-code text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">C / C++ / MATLAB</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="400">
-            <i class="devicon-django-plain colored text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Android</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="500">
-            <i class="fa-solid fa-mobile-screen-button text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">VHDL</span>
-          </div>
+    <!-- Programming & Scripting -->
+    <div class="mt-8" data-aos="fade-up">
+      <h3 class="text-2xl font-semibold mb-6">📜 Programming & Scripting</h3>
+      <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
+        <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left">
+          <i class="devicon-python-plain colored text-3xl mb-1"></i>
+          <span class="font-semibold text-sm">Python & OpenCV</span>
+        </div>
+        <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="100">
+          <i class="devicon-pytorch-original colored text-3xl mb-1"></i>
+          <span class="font-semibold text-sm">PyTorch & CUDA</span>
+        </div>
+        <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="200">
+          <i class="devicon-tensorflow-original colored text-3xl mb-1"></i>
+          <span class="font-semibold text-sm">TensorFlow & Sklearn</span>
+        </div>
+        <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="300">
+          <i class="fa-solid fa-code text-3xl mb-1"></i>
+          <span class="font-semibold text-sm">C / C++ / MATLAB</span>
+        </div>
+        <!-- Changed Android logo -->
+        <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="400">
+          <i class="devicon-android-plain colored text-3xl mb-1"></i>
+          <span class="font-semibold text-sm">Android</span>
+        </div>
+        <!-- Changed hardware (VHDL) logo -->
+        <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="500">
+          <i class="fa-solid fa-microchip text-3xl mb-1"></i>
+          <span class="font-semibold text-sm">VHDL</span>
         </div>
       </div>
+    </div>
+  </div>
 
       <!-- Domain Knowledge -->
       <div class="mt-12" data-aos="fade-up" data-aos-delay="200">
