--- a/index.html
+++ b/index.html
@@ -269,13 +269,25 @@ I actively collaborate with international scholars on projects targeting top com
         <!-- Changed Android logo -->
         <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="400">
           <i class="devicon-android-plain colored text-3xl mb-1"></i>
-          <span class="font-semibold text-sm">Android</span>
+          <span class="font-semibold text-sm">Android (Java & Kotlin)</span>
         </div>
         <!-- Changed hardware (VHDL) logo -->
         <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="500">
           <i class="fa-solid fa-microchip text-3xl mb-1"></i>
           <span class="font-semibold text-sm">VHDL</span>
         </div>
+
+      <!-- Solidity -->
+      <div
+        class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition"
+        data-aos="flip-left"
+        data-aos-delay="450"
+      >
+        <i class="devicon-solidity-plain colored text-3xl mb-1"></i>
+        <span class="font-semibold text-sm">Solidity & Smart Contracts</span>
+      </div>
+
+        
       </div>
     </div>
   </div>
