--- a/index.html
+++ b/index.html
@@ -289,37 +289,60 @@ I actively collaborate with international scholars on projects targeting top com
     </div>
   </div>
 
-      <!-- Domain Knowledge -->
-      <div class="mt-12" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="text-2xl font-semibold mb-6">🧠 Domain Knowledge</h3>
-        <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="200">
-            <i class="fa-solid fa-layer-group text-purple-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Machine / Deep Learning</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="100">
-            <i class="fa-solid fa-eye text-green-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">2D / 3D Computer Vision </span>
-          </div>
+ <!-- Domain Knowledge -->
+<div class="mt-12" data-aos="fade-up" data-aos-delay="200">
+  <h3 class="text-2xl font-semibold mb-6">🧠 Domain Knowledge</h3>
+  <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
+    
+    <!-- Machine / Deep Learning -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="100">
+      <i class="fa-solid fa-brain text-purple-500 text-3xl mb-2"></i>
+      <span class="font-semibold text-sm text-center">Machine / Deep Learning</span>
+    </div>
 
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="300">
-            <i class="fa-solid fa-laptop-code text-indigo-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Software Development</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="400">
-            <i class="fa-solid fa-server text-yellow-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm"> Molti-Modal (Vision-Language)|Generative AI</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left">
-            <i class="fa-solid fa-brain text-red-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm"> Test-Time adaptation | Hallucination mitigation</span>
-          </div>
-          <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="500">
-            <i class="fa-solid fa-robot text-blue-500 text-3xl mb-1"></i>
-            <span class="font-semibold text-sm">Electronics & Signal Processing</span>
-          </div>
-        </div>
-      </div>
+    <!-- 2D / 3D Computer Vision -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="200">
+      <i class="fa-solid fa-eye text-green-500 text-3xl mb-2"></i>
+      <span class="font-semibold text-sm text-center">2D / 3D Computer Vision</span>
+    </div>
+
+    <!-- Software Development -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="300">
+      <i class="fa-solid fa-laptop-code text-indigo-500 text-3xl mb-2"></i>
+      <span class="font-semibold text-sm text-center">Software Development</span>
+    </div>
+
+    <!-- Multi-Modal (Vision-Language) AI -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="400">
+      <i class="fa-solid fa-language text-yellow-500 text-3xl mb-2"></i>
+      <span class="font-semibold text-sm text-center">Multi-Modal (Vision-Language) AI</span>
+    </div>
+
+    <!-- Generative Models -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="500">
+      <i class="fa-solid fa-wand-magic-sparkles text-pink-500 text-3xl mb-2"></i>
+      <span class="font-semibold text-sm text-center">Generative Models</span>
+    </div>
+
+    <!-- Test-Time Adaptation -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="600">
+      <i class="fa-solid fa-flask text-red-500 text-3xl mb-2"></i>
+      <span class="font-semibold text-sm text-center">Test-Time Adaptation</span>
+    </div>
+
+    <!-- Object Hallucination Mitigation -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="700">
+      <i class="fa-solid fa-eye-slash text-orange-500 text-3xl mb-2"></i>
+      <span class="font-semibold text-sm text-center">Object Hallucination Mitigation</span>
+    </div>
+
+    <!-- Electronics & Signal Processing -->
+    <div class="bg-white shadow-lg rounded-2xl p-4 flex flex-col items-center justify-center hover:scale-105 transition" data-aos="flip-left" data-aos-delay="800">
+      <i class="fa-solid fa-microchip text-blue-500 text-3xl mb-2"></i>
+      <span class="font-semibold text-sm text-center">Electronics & Signal Processing</span>
+    </div>
+  </div>
+</div>
 
       <!-- LinkedIn -->
       <div class="mt-16 text-center" data-aos="fade-up" data-aos-delay="400">
