--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@ He is currently conducting research in multi-modal AI, generative models, 3D vis
       <div class="mt-8 flex justify-center gap-6" data-aos="fade-up" data-aos-delay="200">
         <a href="https://www.linkedin.com/in/mehran-tamjidi-34293b229/" class="text-slate-200 hover:text-blue-500 text-2xl"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/shining0611armor" class="text-slate-200 hover:text-white text-2xl"><i class="fa-brands fa-github"></i></a>
+        <a href="mailto:mehrant.0611@gmail.com" class="text-slate-200 hover:text-red-400 text-2xl" title="Email"><i class="fa-solid fa-envelope"></i></a>
       </div>
     </div>
   </section>
