--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ I actively collaborate with international scholars on projects targeting top com
       <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
         <i class="fa-solid fa-award text-yellow-500 text-3xl mt-1"></i>
         <div>
-          <div class="font-semibold underline">Reviewer for Top-Tier Venues</div>
+          <div class="font-semibold">Reviewer for Top-Tier Venue</div>
           <div class="text-sm text-slate-500">September 2025</div>
         </div>
       </div>
@@ -525,7 +525,7 @@ I actively collaborate with international scholars on projects targeting top com
       <div class="bg-white shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
         <i class="fa-solid fa-trophy text-blue-500 text-3xl mt-1"></i>
         <div>
-          <div class="font-semibold underline">Top Rank in Both MSc and BSc Programs</div>
+          <div class="font-semibold">Top Rank in Both MSc and BSc Programs</div>
           <div class="text-sm text-slate-500">Winter 2024</div>
         </div>
       </div>
