--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ I actively collaborate with international scholars on projects targeting top com
 
 
   <!-- Technical Skills -->
-  <section id="Skills" class="py-20 bg-white">
+  <section id="skills" class="py-20 bg-white">
   <div class="max-w-screen-lg mx-auto px-6">
     <h2 class="text-4xl font-bold mb-12 text-center uppercase tracking-wide" data-aos="zoom-in">
       🛠 Technical Skills
