--- a/index.html
+++ b/index.html
@@ -58,20 +58,19 @@
   </header>
 
 
-
- <!-- Hero Section -->
+<!-- Hero -->
 <section
   id="home"
-  class="relative min-h-screen flex items-center justify-center bg-gradient-to-br from-gray-900 via-gray-800 to-black text-center overflow-hidden"
+  class="relative hero min-h-screen flex items-center justify-center text-center bg-cover bg-center overflow-hidden"
+  style="
+    background-image: url('https://shining0611armor.github.io/Images/main.jpg');
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+  "
 >
-  <!-- Background overlay (optional animated gradient or image) -->
-  <div
-    class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1500&q=80')] bg-cover bg-center opacity-20"
-  ></div>
+  <!-- Dark overlay for readability -->
+  <div class="absolute inset-0 bg-black/40"></div>
 
-  <!-- Hero Content -->
   <div class="relative z-10 px-6 max-w-3xl text-white" data-aos="fade-up">
-    
     <!-- Profile Image -->
     <img 
       src="https://raw.githubusercontent.com/shining0611armor/shining0611armor.github.io/main/Images/profile.jpg"
@@ -83,29 +82,28 @@
     <!-- Name -->
     <h1 class="text-4xl md:text-6xl font-extrabold mb-4">Mehran Tamjidi</h1>
 
-    <!-- Subtitle / Typed.js dynamic text -->
+    <!-- Typed.js subtitle -->
     <p class="text-lg md:text-2xl mb-6">
       <span id="typed" class="text-cyan-300"></span>
     </p>
 
     <!-- Buttons -->
     <div class="flex flex-col md:flex-row gap-4 justify-center">
-      <a 
+      <a
         href="#contact"
         class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full shadow-lg transition"
+        >Let’s Connect</a
       >
-        Let’s Connect
-      </a>
-      <a 
+      <a
         href="https://drive.google.com/file/d/126dKtvHbFaRjNRLI02DaYx-IafkCrb0_/view?usp=drive_link"
         download
         class="bg-white/20 hover:bg-white/30 px-8 py-3 rounded-full border border-white shadow-lg backdrop-blur transition"
+        >Download CV</a
       >
-        Download CV
-      </a>
     </div>
   </div>
 </section>
+
 
 
   <!-- About Me -->
