--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div class="relative z-10 px-6 max-w-3xl text-white" data-aos="fade-up">
     <!-- Profile Image -->
     <img 
-      src="https://raw.githubusercontent.com/shining0611armor/shining0611armor.github.io/main/Images/profile.jpg"
+      src="https://raw.githubusercontent.com/shining0611armor/shining0611armor.github.io/main/Images/profile.png"
       alt="Mehran Tamjidi"
       class="w-32 h-32 md:w-48 md:h-48 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover"
       loading="lazy"
